--- a/source/index.html
+++ b/source/index.html
@@ -87,19 +87,19 @@
                     <img class="products__img" src="images/1.png" alt="">
                     <div class="products__item-title">Крановая площадка</div>
                 </div>
-                <div class="products__item">
+                <div class="products__item products__item--center">
                     <img class="products__img" src="images/2.png" alt="">
-                    <div class="products__item-title">ТОВАРЫ СЕЛЬского
+                    <div class="products__item-title ">Товары сельского
                         хозяйства</div>
                 </div>
                 <div class="products__item">
                     <img class="products__img" src="images/3.png" alt="">
-                    <div class="products__item-title">ФАСОВКА от 300 гр
+                    <div class="products__item-title">Фасовка от 300 гр
                         до 1 тонны</div>
                 </div>
                 <div class="products__item">
                     <img class="products__img" src="images/4.png" alt="">
-                    <div class="products__item-title">ГРАНИТНЫЙ Щебень</div>
+                    <div class="products__item-title">Гранитный щебень</div>
                 </div>
                 <div class="products__item">
                     <img class="products__img" src="images/5.png" alt="">
