--- a/source/index.html
+++ b/source/index.html
@@ -84,12 +84,12 @@
             </div>
             <div class="products__inner">
                 <div class="products__item">
-                    <img class="products__img" src="images/1.png" alt="">
-                    <div class="products__item-title">Крановая площадка</div>
+                    <img class="products__img" src="images/4.png" alt="">
+                    <div class="products__item-title">Гранитный щебень</div>
                 </div>
                 <div class="products__item products__item--center">
                     <img class="products__img" src="images/2.png" alt="">
-                    <div class="products__item-title ">Товары сельского
+                    <div class="products__item-title">Товары сельского
                         хозяйства</div>
                 </div>
                 <div class="products__item">
@@ -121,7 +121,7 @@
                         весы 18м, 80тн</div>
                 </div>
                 <div class="products__item">
-                    <img class="products__img" src="images/9.png" ] alt="">
+                    <img class="products__img" src="images/9.png" alt="">
                     <div class="products__item-title">железодорожные
                         весы на 2 вагона</div>
                 </div>
