--- a/source/index.html
+++ b/source/index.html
@@ -58,9 +58,7 @@
             <div class="container">
                 <div class="main__slider">
                     <h1 class="main__slider-title">
-                        выгрузка вагонов, АРЕНДА
-                        ЗЕМЛИ, КРаНОВЫХ ПЛОЩАДОК,
-                        ответственное хранение
+                        выгрузка вагонов, АРЕНДА ЗЕМЛИ, КРаНОВЫХ ПЛОЩАДОК, ответственное хранение
                     </h1>
                     <img class="main__slider-bg" src="images/main-bg.jpg" alt="">
                     <button class="main__slider-btn" id="myBtn">Заказать</button>
@@ -89,13 +87,12 @@
                 </div>
                 <div class="products__item">
                     <img class="products__img" src="images/2.png" alt="">
-                    <div class="products__item-title">Товары сельского
-                        хозяйства</div>
+                    <div class="products__item-title">Товары сельского хозяйства
+                    </div>
                 </div>
                 <div class="products__item">
                     <img class="products__img" src="images/3.png" alt="">
-                    <div class="products__item-title">Фасовка от 300 гр
-                        до 1 тонны</div>
+                    <div class="products__item-title">Фасовка от 300 гр до 1 тонны</div>
                 </div>
                 <div class="products__item">
                     <img class="products__img" src="images/4.png" alt="">
@@ -111,19 +108,16 @@
                 </div>
                 <div class="products__item">
                     <img class="products__img" src="images/7.png" alt="">
-                    <div class="products__item-title">ВЫГРУЗКА ВАГОНОВ
-                        И ОТВЕТСТВЕННОЕ
-                        ХРАНЕНИЕ</div>
+                    <div class="products__item-title">ВЫГРУЗКА ВАГОНОВ И ОТВЕТСТВЕННОЕ ХРАНЕНИЕ
+                    </div>
                 </div>
                 <div class="products__item">
                     <img class="products__img" src="images/8.png" alt="">
-                    <div class="products__item-title">автомобильные
-                        весы 18м, 80тн</div>
+                    <div class="products__item-title">автомобильные весы 18м, 80тн</div>
                 </div>
                 <div class="products__item">
                     <img class="products__img" src="images/9.png" alt="">
-                    <div class="products__item-title">железодорожные
-                        весы на 2 вагона</div>
+                    <div class="products__item-title">железодорожные весы на 2 вагона</div>
                 </div>
             </div>
         </div>
@@ -137,51 +131,42 @@
 
                     <div class="advantages__item">
                         <div class="advantages__number">01</div>
-                        <div class="advantages__info">11,5 га площадь
-                            базы</div>
+                        <div class="advantages__info">11,5 га площадь базы
+                        </div>
                     </div>
                     <div class="advantages__item">
                         <div class="advantages__number">02</div>
-                        <div class="advantages__info">2 своих
-                            тепловоза</div>
+                        <div class="advantages__info">2 своих тепловоза
+                        </div>
                     </div>
                     <div class="advantages__item">
                         <div class="advantages__number">03</div>
-                        <div class="advantages__info">Повышенный путь
-                            для выгрузки
-                            инертных грузов</div>
+                        <div class="advantages__info">Повышенный путь для выгрузки инертных грузов</div>
                     </div>
                     <div class="advantages__item">
                         <div class="advantages__number">04</div>
-                        <div class="advantages__info">8 км от
-                            центра Казани</div>
+                        <div class="advantages__info">8 км от центра Казани</div>
                     </div>
                     <div class="advantages__item">
                         <div class="advantages__number">05</div>
-                        <div class="advantages__info">Возможность
-                            выгрузки хопров
-                            и сыпучих грузов</div>
+                        <div class="advantages__info">Возможность выгрузки хопров и сыпучих грузов</div>
                     </div>
                     <div class="advantages__item">
                         <div class="advantages__number">06</div>
-                        <div class="advantages__info">Железнодорожные
-                            весы на 2 вагона</div>
+                        <div class="advantages__info">Железнодорожные весы на 2 вагона</div>
                     </div>
                     <div class="advantages__item">
                         <div class="advantages__number">07</div>
-                        <div class="advantages__info">Автомобильные
-                            весы 18 м на 80 тонн</div>
+                        <div class="advantages__info">Автомобильные весы 18 м на 80 тонн</div>
                     </div>
                     <div class="advantages__item">
                         <div class="advantages__number">08</div>
-                        <div class="advantages__info">3 пандуса для выгрузки
-                            и загрузки крытых
-                            вагонов и фур</div>
+                        <div class="advantages__info">3 пандуса для выгрузки и загрузки крытых вагонов и фур</div>
                     </div>
                     <div class="advantages__item">
                         <div class="advantages__number">09</div>
-                        <div class="advantages__info">Козловой
-                            кран</div>
+                        <div class="advantages__info">Козловой кран
+                        </div>
                     </div>
                 </div>
             </div>
@@ -208,16 +193,11 @@
                 <div class="land__info">
                     <div class="land__title">Аренда земли</div>
                     <div class="land__description">
-                        Предлагаем в аренду открытые площадки для хранения грузов и техники. Площадь базы составляет
-                        11,5га.
-                        Общая протяженность внутренних ж/д путей позволяет производить погрузо-разгрузочные работы до 60
-                        вагонов в сутки единовременно. На базе работают два маневровых
-                        собственных тепловоза. Есть железнодорожные
-                        и автомобильные весы, козловой кран, повышенный
-                        путь, пандусы для выгрузки крытых вагонов и фур.
+                        Предлагаем в аренду открытые площадки для хранения грузов и техники. Площадь базы составляет 11,5га. Общая протяженность внутренних ж/д путей позволяет производить погрузо-разгрузочные работы до 60 вагонов в сутки единовременно. На базе работают два маневровых
+                        собственных тепловоза. Есть железнодорожные и автомобильные весы, козловой кран, повышенный путь, пандусы для выгрузки крытых вагонов и фур.
                     </div>
-                    <div>
-                        <button class="land__button button-consultation">Получить консультацию</button>
+                    <div class="button-consultation">
+                        <button class="land__button">Получить консультацию</button>
                     </div>
                 </div>
 
@@ -232,20 +212,8 @@
         <div class="container">
             <div class="warehouses__info">
                 <div class="warehouses__title">аренда складов</div>
-                <div class="warehouses__description">Предлагаем в аренду крытые и
-                    открытые складские и
-                    производственные площадки. Склады
-                    комплекса оснащены
-                    погрузочно-разгрузочной техникой.
-                    Открытые складские площадки
-                    приспособлены и для хранения
-                    негабаритных грузов. Собственный
-                    ж.д. подъездной путь. Охраняемая
-                    территория, удобные подъездные пути
-                    для любых видов транспорта. На
-                    закрытой территории базы
-                    обеспечивается функционирование
-                    всех инженерных сетей.</div>
+                <div class="warehouses__description">Предлагаем в аренду крытые и открытые складские и производственные площадки. Склады комплекса оснащены погрузочно-разгрузочной техникой. Открытые складские площадки приспособлены и для хранения негабаритных грузов. Собственный ж.д. подъездной
+                    путь. Охраняемая территория, удобные подъездные пути для любых видов транспорта. На закрытой территории базы обеспечивается функционирование всех инженерных сетей.</div>
                 <div class="warehouses__button button-consultation">Получить консультацию</div>
             </div>
             <div>
@@ -260,11 +228,8 @@
 
     <section class="form">
         <div class="container">
-            <h2 class="form__title">УЗНАТЬ О ЦЕНАХ,
-                ПОЛУЧИТЬ
-                КОНСУЛЬТАЦИЮ
-                ИЛИ ПЕРСОНАЛЬНОЕ
-                ПРЕДЛОЖЕНИЕ</h2>
+            <h2 class="form__title">УЗНАТЬ О ЦЕНАХ, ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ ИЛИ ПЕРСОНАЛЬНОЕ ПРЕДЛОЖЕНИЕ
+            </h2>
             <form class="form__box" action="">
                 <input class="form__name" type="text" placeholder="Имя">
                 <input class="form__number" type="number" placeholder="Телефон">
